# write/docs/swagger.json
@@ -4,7 +4,6 @@
         "description": "This is blog api test server. jwt token prefix: Bearer",
         "title": "Kicoe Blog API",
         "contact": {},
-        "license": {},
         "version": "1.0"
     },
     "basePath": "/api/v1",
@@ -237,6 +236,28 @@
                 }
             }
         },
+        "/auth/info": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "deprecated",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.infoResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/login": {
             "post": {
                 "consumes": [
@@ -269,6 +290,113 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/regist": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "deprecated",
+                "parameters": [
+                    {
+                        "description": " ",
+                        "name": "loginData",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.AuthBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.authResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/cas/auth": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cas"
+                ],
+                "summary": "check cas key",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "cas key",
+                        "name": "key",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/cas/key": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cas"
+                ],
+                "summary": "get cas key",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.casAuthorization"
+                        }
+                    },
+                    "403": {
+                        "description": "Unauthenticated",
                         "schema": {
                             "$ref": "#/definitions/errors.HTTPError"
                         }
@@ -477,6 +605,94 @@
                     {
                         "type": "integer",
                         "description": "code id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "403": {
+                        "description": "Unauthenticated",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "NotFound",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/comment": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Comment"
+                ],
+                "summary": "get comment list",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "current page",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.commentListResponse"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/errors.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/comment/{id}": {
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Comment"
+                ],
+                "summary": "delete comment",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "comment id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -730,7 +946,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.TagList"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Tag"
+                            }
                         }
                     },
                     "403": {
@@ -896,7 +1115,6 @@
                     }
                 },
                 "pagination": {
-                    "type": "object",
                     "$ref": "#/definitions/utils.Pagination"
                 }
             }
@@ -905,6 +1123,14 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.casAuthorization": {
+            "type": "object",
+            "properties": {
+                "cas_key": {
                     "type": "string"
                 }
             }
@@ -919,7 +1145,20 @@
                     }
                 },
                 "pagination": {
-                    "type": "object",
+                    "$ref": "#/definitions/utils.Pagination"
+                }
+            }
+        },
+        "api.commentListResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Comment"
+                    }
+                },
+                "pagination": {
                     "$ref": "#/definitions/utils.Pagination"
                 }
             }
@@ -932,6 +1171,17 @@
                     "items": {
                         "$ref": "#/definitions/model.File"
                     }
+                }
+            }
+        },
+        "api.infoResponse": {
+            "type": "object",
+            "properties": {
+                "background_image": {
+                    "type": "string"
+                },
+                "is_register": {
+                    "type": "boolean"
                 }
             }
         },
@@ -1062,6 +1312,32 @@
                 }
             }
         },
+        "model.Comment": {
+            "type": "object",
+            "properties": {
+                "art_id": {
+                    "type": "integer"
+                },
+                "created_time": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                },
+                "to_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.File": {
             "type": "object",
             "properties": {
@@ -1116,12 +1392,6 @@
                 "updated_time": {
                     "type": "string"
                 }
-            }
-        },
-        "model.TagList": {
-            "type": "array",
-            "items": {
-                "$ref": "#/definitions/model.Tag"
             }
         },
         "model.TagMeta": {
